--- a/app/globals.css
+++ b/app/globals.css
@@ -25,3 +25,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.section-card {
+  @apply bg-white p-12 rounded-3xl shadow-lg my-8;
+}
+
