--- a/app/globals.css
+++ b/app/globals.css
@@ -29,3 +29,8 @@ body {
   @apply bg-white p-12 rounded-3xl shadow-lg my-8;
 }
 
+.section-title-gradient {
+  @apply text-transparent bg-clip-text;
+  background-image: linear-gradient(135deg, rgb(2, 132, 199) 0%, rgb(37, 99, 235) 50%, rgb(79, 70, 229) 100%);
+}
+
