--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,9 @@
   --background: #FFFFFF;
   --foreground: #FFFFFF;
 }
-
+html {
+  scroll-behavior: smooth;
+}
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
